sugar-toolkit (0.81.5-1) unstable; urgency=low

  * New upstream release.
  * Update local cdbs snippets:
    + Relax copyright-check to only warn about its discoveries.  Closes:
      bug#486987.
    + Update dependency cleanup to strip cdbs 0.4.27 (not 0.4.27-1).
  * Update debian/copyright (new files, same owners and licenses).
    Update debian/copyright-hints.
  * Semi-auto-update debian/control to update build-dependencies:
      DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 20 Jun 2008 20:57:43 +0200

sugar-toolkit (0.81.4-2) unstable; urgency=medium

  * Add patch 2002 to ignore debian subdir and .pc quilt subdir when
    packaging bundles (since version 0.81.4 the MANIFEST file is ignored
    and instead everything but an internally hardcoded exception list is
    included).
  * Set urgency=medium as -1 causes FTBFS for sugar activities.

 -- Jonas Smedegaard <dr@jones.dk>  Wed, 11 Jun 2008 03:30:01 +0200

sugar-toolkit (0.81.4-1) unstable; urgency=low

  * New upstream release.
  * Update debian/copyright:
    + Really adjust paths as promised in 0.79.7-1
    + Update copyright year and license owner for
      src/sugar/activity/bundlebuilder.py
  * Update copyright-hints regarding above mentioned bundlebuilder.py.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 09 Jun 2008 12:22:13 +0200

sugar-toolkit (0.81.3-1) unstable; urgency=low

  * New upstream release.
  * Unfuzz patches.
  * Mention po/Makefile.in.in (freeware) in debian/copyright.  Update
    debian/copyright-hints.

 -- Jonas Smedegaard <dr@jones.dk>  Mon, 26 May 2008 10:42:48 +0200

sugar-toolkit (0.79.7-1) unstable; urgency=low

  * New upstream release.
  * Unfuzz patches (most of sources moved sugar -> src/sugar).
  * Drop patch 1003 fixing zip-based bundle install (upstream identical
    fix applied within an hour(!) from the earlier Debian patch).
  * Mention new file src/sugar/presence/sugartubeconn.py in