@@ -1,6 +1,8 @@
 sugar-toolkit (0.81.5-1) unstable; urgency=low
 
   * New upstream release.
+  * Rewrite patch 2002 (ignore debian subdir and .pc quilt subdir) and
+    unfuzz patch 1002.
   * Update local cdbs snippets:
     + Relax copyright-check to only warn about its discoveries.  Closes:
       bug#486987.
